cleanup tests: avoid copying
GitOrigin-RevId: 71c1dfd4fd98fd34cf6802497a416979b484ed67